hcal.c
hdate.c
- GNU-compliance for --version and --help
- rewrite all functions to pass and use
  const option_list* instead of option_list

hdate.c
- print candle-lighting before dafyomi, omer, etc.
- option data-first to apply also for dafyomi

local_functions.h
- change MIN_CANDLES_MINUTES to 15 for minhag London

custom_days.c
- handle Cheshvan 30 and Kislev 30 in non-leap year
- handle Adar days in years that don't have them
- reduce malloc/free requirements in sscanf() calls

hcal.1
hdate.1
- update documentation
- correct usage of "-" to "\-" for compliance with 
  debian policy (lintian)

zdump3.c
zdump3.h
- new files

----------------------------------------------------------------------------
custom_days.c
custom_days.h
local_functions.h
- new files

support.h
- minor changes

hdate_julian.c
- BUGFIX hdate_set_hdate was not returning
  the current date when d or m was set to zero.
- BUGFIX hdate_set_hdate was returning
  bad input Hebrew d m y when performing
  its secondary purpose of date arithmetic
  (eg. when given 31-1-5772 it would
  return correct info for 1-2-5772 except
  h.hd_day would be 31 and h.hd_month would
  be 1.
- BUGFIX hdate_set_gdate was returning
  bad input gregorian d m y when performing
  its secondary purpose of date arithmetic
  (eg. when given 32-3-2012 it would
  return correct info for 1-4-2012 except
  h.gd_day would be 32 and h.gd_month would
  be 3).

hdate.c
- BUGFIX -ooo in Hebrew was occassionally
  displaying (null)

custom_days.c
- handle february 29 in non-leap year

----------------------------------------------------------------------------

hdate.c
- BUGFIX -ooo now displays arabic numerals when 
  not displaying Hebrew omer text
- new default option --data-first
- new option --labels-first

hcal.c
- BUGFIX - parse_date for alphabetic month only

local_functions.c
- rewrite function parse_date

hdate.1
- update documentation

hdate.1
- update documentation
